--- a/css/css.css
+++ b/css/css.css
@@ -198,6 +198,7 @@ footer{
 width: 100%;
 height: 60px;
 background-color:#6da3c7;
+clear: both;
 }
 footer h1{
 color:#ffff;
@@ -233,24 +234,25 @@ font-family:'Niramit', sans-serif;
 	}
 	.caja1{
 width: 100%;
-height: 350px;
+height: 240px;
 background-color: #6da3c7;	
 }
-	.frases{
-
+.frases{
+float: left;
 margin-top: 60px;
 margin-left: 0px;
 margin-right: ;
-width: 60%;
+width: 100%;
 /*background-color: aqua;*/
-text-align: center;
+text-align: justify;
 color: #ffff;
 font-family:'Niramit', sans-serif;
 }
-	.boton{
+.boton{
+	
 margin-top: 10px;	
 background-color:beige;
-width: 20%;	
+width: 25%;	
 height: 50px;
 border-radius: 25px;	
 float: left;
@@ -259,4 +261,42 @@ color: gray;
 animation:zoomIn;
 	animation-duration:2s;
 }
+	.caja2{
+width: 100%;
+height: 350px;
+background-color: #dd8331;
+}
+		.caja3{
+width: 100%;
+height: 350px;
+background-color: #eecc3a;
+}
+			.caja4{
+width: 100%;
+height: 350px;
+background-color: #fa8596;
+}
+	.n1{
+margin-top: 55px;
+float: left;
+width: 25%;
+height: 150px;
+/*background-color: blanchedalmond;*/
+margin-right: 20px;
+margin-left: 20px;	
+	
+}
+	.caja1 h1{
+	font-family:'Cabin Condensed', sans-serif;
+	font-size: 15px;
+text-align: center;
+	color: beige;
+}
+	.n1 img{
+width: 55%;
+display: block;
+margin-left: auto;
+margin-right: auto;	
+}
+
 }
